@@ -7,8 +7,10 @@ The keys used are:
   !: fixed/modified feature, -: deleted feature, +: new feature
 
 
-current (main branch) -- 29-05-2024
+current (main branch) -- 04-06-2024
   + Adding the ability to disable the checks related to socket binding to a particular device
+  + Adding the ability to configure the Kafka option "enable.ssl.certificate.verification". Reference: https://github.com/edenhill/librdkafka/blob/master/CONFIGURATION.md
+  + Adding the ability to configure the Kafka option "ssl.key.password". Reference: https://github.com/edenhill/librdkafka/blob/master/CONFIGURATION.md
 
 v1.1.4 -- 05-12-2023
   + Adding automatic version number retrieval from the VERSION file
